Completada la documentación de PINF

--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Appendix/Appendix.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Appendix/Appendix.tex
@@ -278,94 +278,87 @@
 \newpage
 	
 \chapter{User manual}
-\section{Introducción}
+\section{Introducction}
+This is the manual that the users may follow in order to use the application.
 
-Aquí se narrará el manual que han de seguir los usuarios del sistema para usar la aplicación.
-
-
-Teniendo en cuenta que será una aplicación web, el primer paso será dirigirse a la dirección web donde esté ubicado el servicio\footnote{Si ha sido integrado en la plataforma de STIMEY, estará en la zona de laboratorios.}.
+Having in mind that this will be a web application, the first step will be going to the web link where the service is set\footnote{If it has been integrated in STIMEY's platform, it will be in laboratory zone.}.
 
 
-\section{Características}
+\section{Features}
+The Fantasy application allows the user to create fantasies so the students learn in a more creative and funny way, with active points, quizzes associated to each active point and a final quiz associated to each fantasy.
 
-La aplicación Fantasy permite al usuario crear fantasías para que los estudiantes aprendan de una forma más creativa y divertida viendo los puntos activos y desarrollando los \textit{quizzes} asociados a cada punto activo, y, finalmente, el \textit{quiz} final asociado a cada fantasía.
+This score will be send to STIMEY's platform in order to be stored in each student profile. 
 
-
-Esta puntuación será enviada a la plataforma de STIMEY para ser almacenada en el perfil de cada alumno.
-
-
-Los alumnos también podrán realizar fantasías que sean ordenadas por sus profesores como tarea. Esta tarea, podrá ser en pareja o individual, y será posteriormente evaluada por el profesor que puso la tarea.
+The students can also create fantasies which are asked by their teacher as a task, this task could be in couples or individually and it can be evaluated afterwards by their teacher.
 
 
-\section{Requisitos previos}
+\section{Previous requirements}
+The previous requirements when using the Fantasy project application are to enter in the weblink where the service is located and to register with the account of the user who is going to use the application.
 
-Los requisitos previos a la hora de usar la aplicación del proyecto Fantasy es entrar en la dirección web donde se encuentre soportado el servicio y registrarse con la cuenta del usuario que vaya a usar la aplicación.
-
-
-Por lo tanto, no es necesario tener nada instalado en el ordenador del usuario debido a que la aplicación se encuentra alojada en un servidor.
+By that means, it is not necessary to install anything in the user's computers because the application is located in a server.
 
 
-\section{Utilización}
-A la hora de utilizar la aplicación y, habiendo accedido con nuestro usuario y contraseña a la plataforma, tendremos una pantalla principal donde podremos ver nuestras fantasías (las que hayamos creado nosotros) y las fantasías que hemos marcado como favoritas para volver a jugarlas.
+\section{Utilization}
+When using the application, and having accessed with our user and password to the platform, we will see a main screen where we could see our fantasies (the ones that we have created) and the fantasies that we have marked as favourites to play again.
 
-\subsection{Crear fantasía}
-Si queremos crear una fantasía, hacemos click sobre el icono de crear una nueva fantasía.
+\subsection{Create fantasy}
+If we want to create a fantasy, we click the ``Create a new fantasy'' icon.
 
 %foto del boton
 
 %foto del modal de crear fantasía
 
-A continuación, rellenamos los campos necesarios y ya estaría creada la fantasía.
+Next, we fill in the necessary fields and the fantasy will be created.
 
 %foto de los campos a rellenar
 
-Una vez hayamos terminado con la creación de la fantasía, podremos volver atrás y verla en la parte reservada a nuestras fantasías.
+Once we have finished with the creation of the fantasy, we could go back and see it in the section reserved for our fantasies.
 
-\subsection{Modificar fantasía}
-Si queremos modificar una fantasía, deberemos hacer click izquierdo sobre el icono de editar fantasía.
+\subsection{Modify fantasy}
+If we want to modify a fantasy, we click the ``Edit fantasy'' icon.
 
 %foto del boton
 
 %poner foto del modal
 
-A continuación, modificaremos los campos que deseemos cambiar.
+Next, we modify the fields that we wish to change.
 
 %poner foto de los campos
 
 
-\subsection{Duplicar fantasía}
-%Se supone que esto debe estar hecho
-
-
-\subsection{Eliminar fantasía}
-Si queremos eliminar una fantasía, haremos click izquierdo sobre el icono de borrar fantasía.
+\subsection{Delete fantasy}
+If we want to delete a fantasy, we click the ``Delete fantasy'' icon.
 
 %foto del botón
 
-\subsection{Crear punto activo}
-A la hora de añadir los puntos activos a la fantasía. Para ello hacemos click izquierdo en el icono de añadir un nuevo punto activo.
+\subsection{Duplicate fantasy}
+%Se supone que esto debe estar hecho
+
+
+\subsection{Create active point}
+If we want to create an active point, we click the ``Create active point'' icon.
 
 %foto del botón
 
 %foto del modal
 
-A continuación, rellenamos los campos necesarios y ya tendríamos creado el primer punto activo.
+Next, we fill in the necessary field and we will have created the first active point.
 
 %foto de los campos
 
-Podremos crear hasta un máximo de diez puntos activos siguiendo los pasos anteriormente mencionados para cada punto activo.
+We can create a maximum of ten active points following the steps mentioned above for each active point.
 
 
-\subsection{Modificar punto activo}
-En los puntos activos tendremos la posibilidad de mover y redimensionar el punto activo a nuestro gusto de forma que se quede donde y como nosotros deseemos.
+\subsection{Modify active point}
+In active points we will have the possibility of moving and resize the active point as we like.
 
-Además, haciendo doble click izquierdo sobre ellos, tendremos la posibilidad de cambiar el contenido de sus campos.
+Moreover, if we double click on them, we will have the possibility of changing the content of its fields.
 
-\subsection{Eliminar punto activo}
+\subsection{Delete active point}
 %se supone que esto debe estar hecho
 
-\subsection{Jugar fantasía}
-Cuando queramos jugar una fantasía (bien sea creada por nosotros o por otro usuario), tendremos que hacer click izquierdo en el icono de jugar la fantasía y se podrá jugar\footnote{Tenemos que tener en cuenta que para los alumnos, solo guardaremos la primera nota que saquen, aunque puedan repetir al fantasía tantas veces como quieran.}.
+\subsection{Play fantasy}
+If we want to play fantasy (created by ourselves or by another user) we click the ``Play fantasy'' icon and we could play the fantasy\footnote{We need to have in mind that for the students, we will only save the first score they get, although they can repeat the fantasy as many times as they wish.}.
 
 %foto del botón
 
