--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Bibliography.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Bibliography.tex
@@ -4,4 +4,5 @@
 	\item \href{https://developer.mozilla.org/es/docs/Web/JavaScript}{Javascript} documentation.
 	\item \href{https://es.wikibooks.org/wiki/Manual_de_LaTeX/Texto_completo}{\LaTeX} documentation.
 	\item \href{https://www.php.net/manual/es/index.php}{PHP} documentation.
+	\item \href{https://www.sonarqube.org/}{SonarQube} tool.
 \end{itemize}
