--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Developing/Implementation.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Developing/Implementation.tex
@@ -11,4 +11,22 @@ Source code of application is in the compressed file that we attached to the tas
 
 
 \section{Code quality}
-\textcolor{red}{Ni idea de esto}
+To see the quality of the code we used the \href{https://www.sonarqube.org/}{SonarQube} tool.
+
+This tool allows you to check the quality of the code hosted on GitHub online.
+
+\newpage
+The results have been the following:
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.3]{Developing/SQ1.jpeg}
+	\caption{SonarQube results.}
+	\label{SonarQube results}
+\end{figure}
+\newpage
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.3]{Developing/SQ2.jpeg}
+	\caption{SonarQube rules.}
+	\label{SonarQube rules}
+\end{figure}
