--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Developing/UseCase.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Developing/UseCase.tex
@@ -20,11 +20,16 @@ We have reached an agreement with STIMEY project members so they give us the rul
 
 The performance of this interface will be regulated by the view-controller model used in their development.
 
+\newpage
 \section{Data design}
 Regarding data design, we have proposed the following diagram for the database of Fantasy project.
 
-\textcolor{red}{DATABASE DIAGRAM}
-
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.5]{Developing/StimeyUML.png}
+	\caption{Stimey database.}
+	\label{Stimey database}
+\end{figure}
 
 \section{Design of components}
 The components used in the development of Fantasy project are: Laravel framework, MySQL and phpMyAdmin.
@@ -32,4 +37,4 @@ The components used in the development of Fantasy project are: Laravel framework
 Thanks to this elements, we could incorporate the necesary views and controllers for the application functioning.
 
 \section{Parameterization of the base software}
-It is not appropriated.
+Not applicable.
