--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Epilogue/UserManual.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Epilogue/UserManual.tex
@@ -19,7 +19,7 @@ By that means, it is not necessary to install anything in the user's computers b
 \section{Utilization}
 When using the application, and having accessed with our user and password to the platform, we will see a main screen where we could see our fantasies (the ones that we have created) and the fantasies that we have marked as favourites to play again.
 
-\subsection{Create a fantasy}
+\subsection{Create fantasy}
 If we want to create a fantasy, we click the ``Create a new fantasy'' icon.
 
 Next, we fill in the necessary fields and the fantasy will be created.
