--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Prolegomenon/Introduction.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Prolegomenon/Introduction.tex
@@ -1,6 +1,6 @@
 \chapter{Introduction}
 \section{Motivation}
-It is a work of the subject ``Proyectos Informaticos'' which, at a professional level, helps us to gain work experience and face real situations facing a demanding clientele.
+It is a work of the subject ``Proyectos Informáticos'' which, at a professional level, helps us to gain work experience and face real situations facing a demanding clientele.
 
 \section{Description of the current system}
 Initially, our client had an application that showed information about a topic on a page and the students did not focus on learning, but went directly to the final questionnaire in order to finish earlier. This means that students did not learn properly or encourage their imagination or creativity.
