--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Prolegomenon/ProyectPlan.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Prolegomenon/ProyectPlan.tex
@@ -56,6 +56,27 @@ The project will last three months and weekly meetings with the client will be h
 	\item Start of the view to be able to play the fantasy.
 \end{enumerate}
 
+\subsection{Sprint 6 ($3^{rd}$ May to $8^{th}$ May)}
+\begin{enumerate}
+	\item Creation of the quiz for the active points.
+	\item Continuation of the view to be able to play the fantasy.
+\end{enumerate}
+
+\subsection{Sprint 7 ($8^{th}$ May to $15^{th}$ May)}
+\begin{enumerate}
+	\item Finalization of active points with all their specified characteristics.
+	\item Finalization of the view to be able to play the fantasy.
+\end{enumerate}
+
+\subsection{Sprint 8 ($15^{th}$ May to $22^{nd}$ May)}
+\begin{enumerate}
+	\item Creation of a login system.
+\end{enumerate}
+
+\subsection{Sprint 9 ($22^{nd}$ May to $29^{th}$ May)}
+\begin{enumerate}
+	\item Plan to deploy the application.
+\end{enumerate}
 
 \section{Meetings}
 \subsection{Meeting 0 ($27^{th}$ February)}
@@ -95,6 +116,35 @@ The project will last three months and weekly meetings with the client will be h
 \begin{enumerate}
 	\item End of sprint 4.
 	\item Start of sprint 5.
+\end{enumerate}
+
+\subsection{Meeting 6 ($3^{rd}$ May)}
+\begin{enumerate}
+	\item End of sprint 5.
+	\item Start of sprint 6.
+\end{enumerate}
+
+\subsection{Meeting 7 ($8^{th}$ May)}
+\begin{enumerate}
+	\item End of sprint 6.
+	\item Start of sprint 7.
+\end{enumerate}
+
+\subsection{Meeting 8 ($15^{th}$ May)}
+\begin{enumerate}
+	\item End of sprint 7.
+	\item Start of sprint 8.
+\end{enumerate}
+
+\subsection{Meeting 9 ($22^{nd}$ May)}
+\begin{enumerate}
+	\item End of sprint 8.
+	\item Start of sprint 9.
+\end{enumerate}
+
+\subsection{Meeting 9 ($29^{th}$ May)}
+\begin{enumerate}
+	\item End of sprint 9.
 \end{enumerate}
 
 \section{Team policy}
@@ -137,3 +187,8 @@ As software resources we have the Laravel framework, Atom, Visual Studio Code, T
 \end{itemize}
 
 \section{Canvas model}
+The canvas model of the Fantasy project is the following:
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.5]{Prolegomenon/Canvas.png}
+\end{figure}
