Terminada la documentación de PINF

--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Appendix/Appendix.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Appendix/Appendix.tex
@@ -279,21 +279,21 @@
 	
 \chapter{User manual}
 \section{Introducction}
-This is the manual that the users may follow in order to use the application.
+This is the manual that the users may follow in order to use the application.
 
 Having in mind that this will be a web application, the first step will be going to the web link where the service is set\footnote{If it has been integrated in STIMEY's platform, it will be in laboratory zone.}.
 
 
 \section{Features}
-The Fantasy application allows the user to create fantasies so the students learn in a more creative and funny way, with active points, quizzes associated to each active point and a final quiz associated to each fantasy.
+The Fantasy application allows the user to create fantasies so the students learn in a more creative and funny way, with active points, quizzes associated to each active point and a final quiz associated to each fantasy.
 
-This score will be send to STIMEY's platform in order to be stored in each student profile. 
+This score will be send to STIMEY's platform in order to be stored in each student profile.
 
 The students can also create fantasies which are asked by their teacher as a task, this task could be in couples or individually and it can be evaluated afterwards by their teacher.
 
 
 \section{Previous requirements}
-The previous requirements when using the Fantasy project application are to enter in the weblink where the service is located and to register with the account of the user who is going to use the application.
+The previous requirements when using the Fantasy project application are to enter in the weblink where the service is located and to register with the account of the user who is going to use the application.
 
 By that means, it is not necessary to install anything in the user's computers because the application is located in a server.
 
@@ -301,50 +301,112 @@ By that means, it is not necessary to install anything in the user's computers b
 \section{Utilization}
 When using the application, and having accessed with our user and password to the platform, we will see a main screen where we could see our fantasies (the ones that we have created) and the fantasies that we have marked as favourites to play again.
 
+\newpage
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.24]{Capturas/Portada.png}
+	\caption{Cover of the Fantasy application.}
+	\label{Cover of the Fantasy application}
+\end{figure}
+
 \subsection{Create fantasy}
 If we want to create a fantasy, we click the ``Create a new fantasy'' icon.
 
-%foto del boton
-
-%foto del modal de crear fantasía
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.8]{Capturas/Create.png}
+	\caption{Create fantasy icon.}
+	\label{Create fantasy icon}
+\end{figure}
 
 Next, we fill in the necessary fields and the fantasy will be created.
 
-%foto de los campos a rellenar
+\newpage
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.2]{Capturas/CamposCrear1.png}
+	\caption{Fields to create fantasy.}
+	\label{Fields to create fantasy1}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.2]{Capturas/CamposCrear2.png}
+	\caption{Fields to create fantasy.}
+	\label{Fields to create fantasy2}
+\end{figure}
+\newpage
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.2]{Capturas/CamposCrear3.png}
+	\caption{Fields to create fantasy.}
+	\label{Fields to create fantasy3}
+\end{figure}
 
 Once we have finished with the creation of the fantasy, we could go back and see it in the section reserved for our fantasies.
 
 \subsection{Modify fantasy}
 If we want to modify a fantasy, we click the ``Edit fantasy'' icon.
 
-%foto del boton
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=1]{Capturas/Edit.png}
+	\caption{Edit fantasy icon.}
+	\label{Edit fantasy icon}
+\end{figure}
 
-%poner foto del modal
-
-Next, we modify the fields that we wish to change.
-
-%poner foto de los campos
+Next, we modify the fields of the fantasy that we wish to change.
 
 
 \subsection{Delete fantasy}
 If we want to delete a fantasy, we click the ``Delete fantasy'' icon.
 
-%foto del botón
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=1]{Capturas/Delete.png}
+	\caption{Delete fantasy icon.}
+	\label{Delete fantasy icon}
+\end{figure}
 
-\subsection{Duplicate fantasy}
+%\subsection{Duplicate fantasy}
 %Se supone que esto debe estar hecho
 
-
+\newpage
 \subsection{Create active point}
 If we want to create an active point, we click the ``Create active point'' icon.
 
-%foto del botón
-
-%foto del modal
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=1]{Capturas/CreateAP.png}
+	\caption{Fields to create active point.}
+	\label{Fields to create AP1}
+\end{figure}
 
 Next, we fill in the necessary field and we will have created the first active point.
 
-%foto de los campos
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.2]{Capturas/CamposAP1.png}
+	\caption{Fields to create active point.}
+	\label{Fields to create AP2}
+\end{figure}
+
+\newpage
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.2]{Capturas/CamposAP2.png}
+	\caption{Fields to create active point.}
+	\label{Fields to create AP3}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.2]{Capturas/CamposAP3.png}
+	\caption{Create active point icon.}
+	\label{Create active point icon}
+\end{figure}
 
 We can create a maximum of ten active points following the steps mentioned above for each active point.
 
@@ -354,15 +416,45 @@ In active points we will have the possibility of moving and resize the active po
 
 Moreover, if we double click on them, we will have the possibility of changing the content of its fields.
 
-\subsection{Delete active point}
+%\subsection{Delete active point}
 %se supone que esto debe estar hecho
+
+\newpage
+\subsection{Search fantasy}
+We can look for fantasies according to their theme and difficulty.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.2]{Capturas/Busca.png}
+	\caption{Search fantasies page.}
+	\label{Search fantasies page}
+\end{figure}
 
 \subsection{Play fantasy}
 If we want to play fantasy (created by ourselves or by another user) we click the ``Play fantasy'' icon and we could play the fantasy\footnote{We need to have in mind that for the students, we will only save the first score they get, although they can repeat the fantasy as many times as they wish.}.
 
-%foto del botón
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=1]{Capturas/PlayIcon.png}
+	\caption{Play fantasy icon.}
+	\label{Play fantasy icon}
+\end{figure}
 
-%foto de la vista de jugar
+\newpage
+Once selected the fantasy that we want to play, we will see the game screen.
 
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.2]{Capturas/Play1.png}
+	\caption{Fantasy game screen.}
+	\label{Fantasy game screen1}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.2]{Capturas/Play2.png}
+	\caption{Fantasy game screen.}
+	\label{Fantasy game screen2}
+\end{figure}
 	
 \end{document}
