--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Epilogue/UserManual.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Epilogue/UserManual.tex
@@ -34,7 +34,7 @@ Next, we modify the fields that we wish to change.
 \subsection{Delete fantasy}
 If we want to delete a fantasy, we click the ``Delete fantasy'' icon.
 
-\subsection{Duplicate fantasy}
+%\subsection{Duplicate fantasy}
 %Rellenar si se llaga a ello
 
 \subsection{Create active point}
@@ -49,8 +49,11 @@ In active points we will have the possibility of moving and resize the active po
 
 Moreover, if we double click on them, we will have the possibility of changing the content of its fields.
 
-\subsection{Delete active point}
+%\subsection{Delete active point}
 %Rellenar si se llega
+
+\subsection{Search fantasy}
+We can look for fantasies according to their theme and difficulty.
 
 \subsection{Play fantasy}
 If we want to play fantasy (created by ourselves or by another user) we click the ``Play fantasy'' icon and we could play the fantasy\footnote{We need to have in mind that for the students, we will only save the first score they get, although they can repeat the fantasy as many times as they wish.}.
